# NLP_project

./: .gitignore  README.md  app.py  bias_ethics_implementation.md  build_rag_index.py  evaluate_hindi_qa.py  evaluate_rag.py  evaluate_rag_diagnostics.py  merge_rag_results.py  precompute.py  pyproject.toml  query_rag.py
evaluation/: hindi_qa_set.jsonl  qa_set.jsonl  rag_diagnostic_set.jsonl
evaluation/diagnostics/: causal_overclaim_review.csv  comment_probe_results.csv  comment_probe_results.jsonl  comment_probe_summary.csv  diagnostic_results.csv  diagnostic_results.jsonl  metrics_summary.csv  paraphrase_breakdown.csv
evaluation/hindi_results/: comparative_report.md  hindi_manual_review.csv  hindi_manual_review.jsonl  metrics_summary.csv  results_all.jsonl  results_groq.jsonl  results_retrieval_only.jsonl  tag_breakdown.csv
nlp_logic/: __init__.py  agg.py  comment_stance.py  reddit_jargon.py  topic_insights.py  topic_modelling.py  trending_persist.py
rag/: __init__.py  chunking.py  config.py  diagnostics.py  eval_utils.py  evaluate.py  graph.py  hindi_eval.py  index.py  llms.py  qa.py  retriever.py  vector_store.py
report/: README.md  generate_report_assets.py  report.md  report.tex
scraping/: data_clean.py  data_scrape.py
scraping/data/: agg_cache.json  representative_docs.json  stance_cache.json  trending_cache.json
