[project]
name = "nlp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "praw>=7.8.1",
    "requests>=2.33.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
    "torch>=2.11.0",
    "transformers>=4.40.0",
    "bertopic>=0.16.0",
    "sentence-transformers>=3.0.0",
    "hdbscan>=0.8.33",
    "umap-learn>=0.5.0",
    "plotly>=6.0.0",
    "wordcloud>=1.9.0",
]
